# llm-report

./: .env  .env.example  .gitignore  .secrets.baseline  2025-01-04-llm-news.docx  2025-01-05-llm-news.docx  2025-01-06-llm-news.docx  2025-01-07-llm-news.docx  2025-01-08-llm-news.docx  2025-01-09-llm-news.docx  2025-01-10-llm-news.docx  2025-01-11-llm-news.docx  2025-01-12-llm-news.docx  2025-01-13-llm-news.docx  LICENSE  README.md  cleaned_reddit_posts.xlsx  config.json.example  data_cleaner.py  main.py  pyproject.toml  reddit_posts.xlsx  reddit_scraper.py  requirements.txt  run.py  summaries.txt  summarizer.py  test_reddit_scraper.py  verify_setup.py
data/: cleaned_reddit_posts_2025-04-28.xlsx  reddit_posts_2025-04-28.xlsx
docs/: installation.md  usage_examples.md
llm_report_tool/: exceptions.py  main.py
llm_report_tool/processors/: classifier.py  data_cleaner.py  latex_report_generator.py  report_generator.py  summarizer.py  topic_extractor.py
llm_report_tool/scrapers/: reddit_scraper.py
llm_report_tool/utils/: config.py  deepseek_client.py  error_handler.py  logging_config.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_config.py  test_config_enhanced.py  test_error_handler.py  test_logging_config.py  test_rate_limiter.py  test_reddit_scraper.py  test_reddit_scraper_enhanced.py  test_summarizer.py
